[tool.poetry]
name = "youchat-py"
version = "0.1.0"
description = "Simple communication with YouChat in python."
readme = "README.md"
packages = [{include = "youchat"}]

[tool.poetry.dependencies]
python = "^3.7"
seleniumbase = "^4.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"